fixed scrollbar issue

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -1,6 +1,9 @@
+html {
+    overflow-y: scroll;
+}
+
 body, input {
   background-color: #FFFFFF;
-  /*font: 11pt monospace;*/
   font-family: 'Inconsolata', cursive;
 }
 
@@ -11,35 +14,41 @@ textarea {
   width: 600px;
   height: 150px; }
 
+#container {
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 50px;
+}
+
 #header, #content, #links {
+  width: 1200px;
+  padding: 5px;
   margin: 15px;
-  margin-left: 300px;
-  margin-right: 300px;
-  width: auto;
   padding-left: 5px;
 }
 
 #header {
     padding-top: 5px;
     padding-bottom: 5px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
     background-color: #FFCC33;
-}
-
-#content {
-    padding-right: 50px;
 }
 
 #links {
     padding-top: 5px;
     padding-bottom: 5px;
-    margin-top: 0px;
-    margin-bottom: 0px;
+    margin-top: 0;
+    margin-bottom: 0;
     background-color: #E0E0E0;
 }
 
 .quotehead {
     background-color: #CCFF33;
+}
+
+.quote {
+  margin: 0;
 }
 
 a {
@@ -61,9 +70,6 @@ a.black {
   font-family: 'Kameron', serif;
   }
 
-.quote {
-  margin: 0px; }
-
 a.up {
   color: green;
   font-weight: bold;
@@ -77,5 +83,5 @@ input.qid {
 
 p.np {
   /* LOL */
-  padding: 0px;
-  margin: 0px; }
+  padding: 0;
+  margin: 0; }
